chore(mgt-api): clean management api